# fastgen

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_ptBR.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  release.yml
OdinSec/k8s/: deployment.yaml  ingress.yaml  service.yaml
examples/: blueprint.yaml
meuteste/: .env
src/: cli.rs  config.rs  main.rs
src/ai/: cli.rs  generator.rs  mod.rs  orchestrator.rs  providers.rs
src/generator/: blueprint.rs  mod.rs  project.rs
src/plugin/: apply.rs  metadata.rs  mod.rs
src/workspace/: devui.rs  external.rs  init.rs  mod.rs  service.rs
templates/base/: Dockerfile  README.md  main.py
templates/monorepo/: docker-compose.yml  pyproject.toml
templates/plugins/__k8s/: service.yaml
templates/plugins/auth-jwt/: plugin.yaml
templates/plugins/k8s/: deployment.yaml  ingress.yaml  plugin.yaml
templates/plugins/telemetry/: plugin.yaml
templates/plugins/testing_bdd/: apply.py  plugin.yaml
templates/plugins/testing_bdd/files/features/: example.feature
templates/plugins/testing_bdd/files/features/steps/: test_steps.py
templates/plugins/testing_bdd/files/tests/: test_example.py
templates/service/: main.py
teste/services/produto/: manifest.md
