[package]
name = "fastgen"
version = "0.3.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "4", features = ["derive"] }
tera = "1.17" 
fs_extra = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rand = "0.8"
base64 = "0.21"