[package]
name = "fastgen"
version = "0.3.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "4", features = ["derive"] }
fs_extra = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
base64 = "0.21"

[dev-dependencies]
rand = "0.8"
tera = "1" # Assuming version 1 is sufficient for tests, as specified.
tempfile = "3" # Added from previous step, should be a dev-dependency